--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.401.x</artifactId>
-                <version>2745.vc7b_fe4c876fa_</version>
+                <artifactId>bom-2.440.x</artifactId>
+                <version>3135.v6d6c1f6b_3572</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -32,7 +32,7 @@
         <revision>2.4.3</revision>
         <changelist>-SNAPSHOT</changelist>
         <gitHubRepo>jenkinsci/build-name-setter-plugin</gitHubRepo>
-        <jenkins.version>2.401.3</jenkins.version>
+        <jenkins.version>2.440.3</jenkins.version>
         <!--Enabling static analysis using spotbugs checks-->
         <spotbugs.effort>Max</spotbugs.effort>
      	  <spotbugs.threshold>Low</spotbugs.threshold> <!--Decreased threshold for more deeper checks-->
